--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "ngbuilder - SASS compilation plugin",
   "main": "sass.js",
   "dependencies": {
-    "gulp": "~3.6.2",
     "gulp-sass": "^0.7.3",
     "gulp-concat": "~2.2.0",
     "multipipe": "^0.1.1",
-    "gulp-cssmin": "^0.1.6"
+    "gulp-cssmin": "^0.1.6",
+    "vinyl-fs": "^0.3.7"
   },
   "repository": {
     "type": "git",
